Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96124

QListview automatic scrolling should consider when the item is not selected

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • None
    • 5.15, 6.0, 6.1, 6.2
    • None
    • ubuntu 19.04
    • Linux/X11

      Phenomenon:
      QListview sets IconMode and MultiSelection or ExtendedSelection, when the mouse scrolls to the end, if the item is not selected, the viewport will not display the last row, this will confuse the user to think that all are selected

      Refer to the video and demo for the steps to reproduce.

       

      hope:

      Regardless of whether the item is selected, all items should be displayed when the mouse slides to the end

        1. demo.zip
          844 kB
          kingderzhang
        2. error.mp4
          1.72 MB
          kingderzhang
        3. windows.mp4
          1.36 MB
          kingderzhang
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            kingderzhang kingderzhang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes